Fixing layout problems

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,52 +142,43 @@ h4 {
   font-size: var(--s1);
 }
 
-article,
-main {
+article {
+  --max-width: 900px;
+  --col-width: 60%;
+  --threshold: calc(var(--max-width) - 100px);
   max-width: var(--max-width);
   width: 100%;
-  display: grid;
-  grid-template-rows: repeat(250px, 2fr);
-  grid-column-gap: var(--s1);
-
   margin: auto;
-  padding: 0 var(--s1) var(--s1) 0;
+  padding: var(--s1);
+  display: flex;
+  gap: var(--s1);
 }
-div.aside {
-  min-width: 250px;
-  max-width: 100%;
-  width: 250px;
-  font-family: var(--font-plain);
-  text-transform: lowercase;
-  color: var(--color-text);
-  text-align: end;
-  float: left;
-  border-right: 5px solid var(--color-accent);
-  font-size: var(--s3);
-  padding-right: var(--s1);
-  padding-bottom: var(--s1);
-  font-weight: 700;
-  hyphens: auto;
-}
-article2 > header,
-section2 > h2 {
-  min-width: calc(100% - var(--col-width) - var(--s2));
+
+article > header {
+  min-width: calc(100% - var(--col-width) - var(--s1));
   max-width: 100%;
   width: calc((var(--threshold) - 100%) * 1000);
   font-family: var(--font-plain);
   text-transform: lowercase;
   color: var(--color-text);
   text-align: end;
-  float: left;
   border-right: 5px solid var(--color-accent);
   font-size: var(--s3);
   padding-right: var(--s1);
   padding-bottom: var(--s1);
   font-weight: 700;
   hyphens: auto;
+  flex-shrink: 0;
 }
 
-sidebar > header > span {
+article > header > h2 {
+  font-size: var(--s2);
+  font-family: var(--font-plain);
+  color: var(--color-text-muted);
+  font-weight: 700;
+}
+
+article > header > span {
   padding-top: var(--s1);
   font-size: var(--s-1);
   display: block;
@@ -195,9 +186,9 @@ sidebar > header > span {
   color: var(--color-text-muted);
 }
 
-article > :not(header) {
+article > content {
   margin: 0;
-  width: 100%;
+  flex-grow: 1;
   max-width: var(--col-width);
 }
 
